main/default/objects/Parking_Lot__c/Parking_Lot__c.object-meta.xml
<CustomObject>
    <label>Parking Lot</label>
    <nameField>
        <displayFormat>PL-{000000}</displayFormat>
        <label>Parking Lot Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parking Lots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>