main/default/objects/Parking_Lot__c/fields/Addressed_By__c.field-meta.xml
<CustomField>
    <fullName>Addressed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Addressed By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Parking Lots (Addressed By)</relationshipLabel>
    <relationshipName>Parking_Lots1</relationshipName>
    <type>Lookup</type>
</CustomField>