main/default/objects/Parking_Lot__c/fields/Addressed_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Addressed_By_Name__c</fullName>
    <formula>Addressed_By__r.FirstName + &apos;  &apos; + Addressed_By__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Addressed By Name</label>
    <type>Text</type>
</CustomField>