main/default/objects/Parking_Lot__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Parking Lots (Assigned To)</relationshipLabel>
    <relationshipName>Parking_Lots3</relationshipName>
    <type>Lookup</type>
</CustomField>