main/default/objects/Parking_Lot__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <formula>Event__r.Campaign__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign</label>
    <type>Text</type>
</CustomField>