main/default/objects/Parking_Lot__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Feedback</fullName>
            </value>
            <value>
                <fullName>Domain</fullName>
            </value>
            <value>
                <fullName>Workflow</fullName>
            </value>
            <value>
                <fullName>Site Specific</fullName>
            </value>
            <value>
                <fullName>Functionality</fullName>
            </value>
            <value>
                <fullName>Preferences</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Permissions</fullName>
                <isActive>false</isActive>
                <label>Permissions</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>