main/default/objects/Parking_Lot__c/fields/Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Date__c</fullName>
    <description>This field will capture the date and time when the raised issue has been resolved and set the Status to CLOSED.</description>
    <label>Closed Date</label>
    <type>DateTime</type>
</CustomField>