main/default/objects/Parking_Lot__c/fields/Email_Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>Email_Logo_URL__c</fullName>
    <label>Email Logo URL</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>