main/default/objects/Parking_Lot__c/fields/Escalated_To__c.field-meta.xml
<CustomField>
    <fullName>Escalated_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Escalated To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Parking Lots (Escalated To)</relationshipLabel>
    <relationshipName>Parking_Lots2</relationshipName>
    <type>Lookup</type>
</CustomField>