main/default/objects/Parking_Lot__c/fields/Escalated_To_Name__c.field-meta.xml
<CustomField>
    <fullName>Escalated_To_Name__c</fullName>
    <formula>Escalated_To__r.FirstName + &apos; &apos; +  Escalated_To__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Escalated To Name</label>
    <type>Text</type>
</CustomField>