main/default/objects/Parking_Lot__c/fields/Event_Owner__c.field-meta.xml
<CustomField>
    <fullName>Event_Owner__c</fullName>
    <formula>IF(  ISBLANK(Event__r.Parking_Lot_User__c)  , Event__r.Owner:User.FirstName +&apos; &apos;+ Event__r.Owner:User.LastName,  Event__r.Parking_Lot_User__r.FirstName  +&apos; &apos;+  Event__r.Parking_Lot_User__r.LastName )</formula>
    <label>Event Owner</label>
    <type>Text</type>
</CustomField>