main/default/objects/Parking_Lot__c/fields/First_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Modified_Date__c</fullName>
    <description>This field will be populated when the Address by is not empty.</description>
    <label>First Modified Date</label>
    <type>DateTime</type>
</CustomField>