main/default/objects/Parking_Lot__c/fields/Parking_Lot_Page_URL__c.field-meta.xml
<CustomField>
    <fullName>Parking_Lot_Page_URL__c</fullName>
    <label>Parking Lot Page URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>