main/default/objects/Parking_Lot__c/fields/Raised_By__c.field-meta.xml
<CustomField>
    <fullName>Raised_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Raised By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Parking Lots</relationshipLabel>
    <relationshipName>Parking_Lots</relationshipName>
    <type>Lookup</type>
</CustomField>