main/default/objects/Parking_Lot__c/fields/Raised_By_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Raised_By_First_Name__c</fullName>
    <formula>IF( ISBLANK( Raised_By__r.FirstName ) , Raised_By__r.LastName, Raised_By__r.FirstName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Raised By First Name</label>
    <type>Text</type>
</CustomField>