main/default/objects/Parking_Lot__c/fields/Raised_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Raised_By_Name__c</fullName>
    <formula>Raised_By__r.FirstName + &apos;  &apos; + Raised_By__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Raised By Name</label>
    <type>Text</type>
</CustomField>