main/default/objects/Parking_Lot__c/fields/RaisedByDefaultName__c.field-meta.xml
<CustomField>
    <fullName>RaisedByDefaultName__c</fullName>
    <formula>IF(ISBLANK(Raised_By_First_Name__c),Raised_By__r.Email , Raised_By_First_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RaisedByDefaultName</label>
    <type>Text</type>
</CustomField>