main/default/objects/Parking_Lot__c/fields/Resolution_Answer__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Answer__c</fullName>
    <label>Resolution/Answer</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>