main/default/objects/Parking_Lot__c/fields/Session_Details__c.field-meta.xml
<CustomField>
    <fullName>Session_Details__c</fullName>
    <formula>Session__r.Name +  BR()  + Session__r.Session_Details_Full__c</formula>
    <label>Session Details</label>
    <type>Text</type>
</CustomField>