main/default/objects/Parking_Lot__c/fields/Session_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Session_Schedule__c</fullName>
    <formula>TEXT(DATEVALUE(Session__r.Start_Date_Time__c)) + &apos; to &apos; + TEXT(DATEVALUE( Session__r.End_Date_Time__c))

/*TEXT(DATEVALUE(Session__r.Start_Date_Time__c)) + &apos;, &apos; + TEXT(TIMEVALUE(Session__r.Start_Date_Time__c)) + &apos; to &apos; + TEXT(DATEVALUE( Session__r.End_Date_Time__c)) + &apos;, &apos; + TEXT(TIMEVALUE(Session__r.End_Date_Time__c))*/</formula>
    <label>Session Schedule</label>
    <type>Text</type>
</CustomField>