main/default/objects/Parking_Lot__c/fields/Session_Start_End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Session_Start_End_Date_Time__c</fullName>
    <formula>Session__r.Session_Details_Start_Full__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session Start End Date Time</label>
    <type>Text</type>
</CustomField>