main/default/objects/Parking_Lot__c/fields/Show_In_Status_Report__c.field-meta.xml
<CustomField>
    <fullName>Show_In_Status_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>To display parking lot Items in status report opt this option.</inlineHelpText>
    <label>Show In Status Report</label>
    <type>Checkbox</type>
</CustomField>