main/default/objects/Parking_Lot__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <formula>Event__r.Location__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site</label>
    <type>Text</type>
</CustomField>