main/default/objects/Parking_Lot__c/fields/Tech_Notification_Email__c.field-meta.xml
<CustomField>
    <fullName>Tech_Notification_Email__c</fullName>
    <description>Used on sending notifications for new parking lots. Can be either Owner Email or Parking Lot User Email</description>
    <label>Tech Notification Email</label>
    <type>Email</type>
</CustomField>