main/default/objects/Parking_Lot__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Issue</fullName>
            </value>
            <value>
                <fullName>Question</fullName>
            </value>
            <value>
                <fullName>Comment</fullName>
            </value>
            <value>
                <fullName>Statement BH</fullName>
                <isActive>false</isActive>
                <label>Statement BH</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>